changes added by tejaswini

--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -951,7 +951,7 @@
             <span class="menu-arrow"></span>
           </span>
           <div class="menu-sub menu-sub-accordion" routerLinkActive="menu-active-bg">
-            <div class="menu-item menu-accordion" routerLinkActive="here show" data-kt-menu-trigger="click">
+            <div class="menu-item menu-accordion" routerLink="/deleteModal/deleteCrPayment" routerLinkActive="active">
               <span class="menu-link">
                 <span class="menu-bullet">
                   <span class="bullet bullet-dot"></span>
@@ -970,7 +970,7 @@
                 </span>
               </span>
             </div>
-            <div class="menu-item menu-accordion" routerLinkActive="here show" 
+            <div class="menu-item menu-accordion" routerLink="/deleteModal/deleteFuelPrice" routerLinkActive="active"
               data-kt-menu-trigger="click">
               <span class="menu-link">
                 <span class="menu-bullet">
