changes added by tejaswini

--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget28/tables-widget28.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget28/tables-widget28.component.html
@@ -8,7 +8,7 @@
                         <div class="row">
                             <div class="col-auto">
                                 <input class="form-control" type="text" list="allCorporateList"
-                                    placeholder="select dealer" formControlName="selectedDealer"
+                                    placeholder="Select Dealer" formControlName="selectedDealer"
                                     (blur)=getDealerId($event)>
                                 <datalist id="allCorporateList">
                                     <option *ngFor="let data of allDealerList" [value]="data.companyName">
