--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -960,7 +960,7 @@
                 </span>
               </span>
             </div>
-            <div class="menu-item menu-accordion" routerLinkActive="here show"
+            <div class="menu-item menu-accordion" routerLink="/deleteModal/deleteDsr" routerLinkActive="active"
               data-kt-menu-trigger="click">
               <span class="menu-link">
                 <span class="menu-bullet">
@@ -982,7 +982,7 @@
             </div>
           </div>
         </div>
-        <div class="menu-item menu-accordion" routerLinkActive="here show" data-kt-menu-trigger="click">
+        <div class="menu-item menu-accordion" routerLink="/deleteModal/deleteFastag" routerLinkActive="active">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
