changes added by tejaswini

--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -728,16 +728,16 @@
             <span class="menu-arrow"></span>
           </span>
           <div class="menu-sub menu-sub-accordion" routerLinkActive="menu-active-bg">
-            <div class="menu-item menu-accordion" routerLinkActive="here show" data-kt-menu-trigger="click">
+            <div class="menu-item menu-accordion" routerLinkActive="here show" routerLink="/viswasa/UploadKitNumber" data-kt-menu-trigger="click">
               <span class="menu-link">
                 <span class="menu-bullet">
                   <span class="bullet bullet-dot"></span>
                 </span>
-                <span class="menu-title" data-link="/crafted/pages/wizards/horizontal">Upload Kit Number
+                <span class="menu-title">Upload Kit Number
                 </span>
               </span>
             </div>
-            <div class="menu-item menu-accordion" routerLinkActive="here show" routerLink="/crafted/pages/profile"
+            <div class="menu-item menu-accordion" routerLinkActive="here show" routerLink="/viswasa/assignTransactionFastag"
               data-kt-menu-trigger="click">
               <span class="menu-link">
                 <span class="menu-bullet">
@@ -747,7 +747,7 @@
                 </span>
               </span>
             </div>
-            <div class="menu-item menu-accordion" routerLinkActive="here show" routerLink="/crafted/pages/profile"
+            <div class="menu-item menu-accordion" routerLinkActive="here show" routerLink="/viswasa/CoinRewardDetails"
               data-kt-menu-trigger="click">
               <span class="menu-link">
                 <span class="menu-bullet">
