--- a/src/app/pages/delete-modal/delete-dsr/delete-dsr.component.html
+++ b/src/app/pages/delete-modal/delete-dsr/delete-dsr.component.html
@@ -36,8 +36,10 @@
                             </div>
                             <div class="col-md-10">
                                 <div class="p-3">
-                                    <!-- <ng5-slider (click)="setMonth(tickValue)" [(value)]="tickValue"
-                                        [options]="tickValueoptions"></ng5-slider> -->
+                                    <ngx-slider 
+                                    
+                                    [(value)]="selectedMonth">
+                                  </ngx-slider>
                                 </div>
                             </div>
                         </div>
