changes added by tejaswini

--- a/src/app/pages/viswasa/coin-reward-details/coin-reward-details.component.html
+++ b/src/app/pages/viswasa/coin-reward-details/coin-reward-details.component.html
@@ -26,7 +26,7 @@
                                 style="font-size: 13.5px;">REDEEM DETAILS</span>
                         </a>
                         <ng-template ngbNavContent>
-                            <app-stats-widget14></app-stats-widget14>
+                            <app-advance-tables-widget8></app-advance-tables-widget8>
                         </ng-template>
                     </li>
                     <li [ngbNavItem]="3">
