Changes added by PRAMOD

--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -767,7 +767,7 @@
                 </span>
               </span>
             </div>
-            <div class="menu-item menu-accordion" routerLinkActive="here show" routerLink="/crafted/pages/profile"
+            <div class="menu-item menu-accordion" routerLinkActive="here show" routerLink="/viswasa/corporateFT"
               data-kt-menu-trigger="click">
               <span class="menu-link">
                 <span class="menu-bullet">
@@ -777,7 +777,7 @@
                 </span>
               </span>
             </div>
-            <div class="menu-item menu-accordion" routerLinkActive="here show" routerLink="/crafted/pages/profile"
+            <div class="menu-item menu-accordion" routerLinkActive="here show" routerLink="/viswasa/corporateFTLQ"
               data-kt-menu-trigger="click">
               <span class="menu-link">
                 <span class="menu-bullet">
