changes added by tejaswini

--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget17/tables-widget17.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget17/tables-widget17.component.html
@@ -40,7 +40,13 @@
                         Cancel
                     </button>
                     &nbsp;&nbsp;
-                    <a class="nav-link btn btn-sm btn-color-muted btn-active btn-active-light-primary fw-bolder px-4 me-1"
+                    <a class="
+                    nav-link
+                    btn btn-sm btn-color-muted btn-active btn-active-light-primary
+                    fw-bolder
+                    px-4
+                    me-1
+                  " data-bs-toggle="tab" [ngClass]="activeClass('kt_table_widget_17_tab_1')" 
                         (click)="exportExcel()">
                         CSV
                     </a>
