--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget15/tables-widget15.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget15/tables-widget15.component.html
@@ -13,7 +13,13 @@
                             <div class="card-toolbar">
                                 <ul class="nav">
                                     <li class="nav-item">
-                                        <a class="nav-link btn btn-sm btn-color-muted btn-active btn-active-light-primary fw-bolder px-4 me-1"
+                                        <a class="
+                                        nav-link
+                                        btn btn-sm btn-color-muted btn-active btn-active-light-primary
+                                        fw-bolder
+                                        px-4
+                                        me-1
+                                      " data-bs-toggle="tab" [ngClass]="activeClass('kt_table_widget_15_tab_1')" 
                                             (click)="exportexcel()">
                                             CSV
                                         </a>
